--- a/templates/details.html
+++ b/templates/details.html
@@ -15,12 +15,11 @@
 <br><br>
 <div id="flex2">
     <div style="  border-radius: 12px; background-color: white; width: 60%; height: auto; text-align: center;">
-        <h2 style="padding: 5%;"> Edit Pet Details </h2>
+        <h2> Edit Pet Details </h2>
         <!-- Error Message  -->
         {% if message %}
             <span style="background-color:tomato">
             {{ message }}
-            <>
             <br>
         {% endif %}
         <!--  -->
